added interactive venn function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(fancy_6d_triangle)
 export(fancy_6d_triangle_label)
 export(get_shape_data)
 export(ggVennDiagram)
+export(interactive_venn)
 export(label_position)
 export(plotData_add_venn)
 export(plot_shapes)
