--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(fancy_4d_ellipse)
 export(fancy_4d_ellipse_label)
 export(fancy_6d_triangle)
 export(fancy_6d_triangle_label)
+export(get_section_df)
 export(get_shape_data)
 export(ggVennDiagram)
 export(interactive_venn)
